# mbuni

./: .gitignore
cgi/: admin.html  calendar.css  calendar.js  dlr.pl  index.pl  popup.js  status.html  style.css  test.pl  user.html  utility.js
etc/: mail2mms.conf.rb  mbuni.comcel.co.conf  mbuni.def  mbuni.realtime.dk.conf
sbin/: bearerbox  bearerbox.r1  bearerbox.r5  run_kannel_box  run_kannel_box.r1  (+7 more)
src/mbuni-1.4.0/: .svnignore  ChangeLog  Makefile.am  VERSION  c.sh  configure.ac  instance-install.sh  libtool  post-install.sh  stamp-h1  svn-up2date.sh
src/mbuni-1.4.0/autotools/: Makefile
src/mbuni-1.4.0/doc/: userguide.shtml
src/mbuni-1.4.0/doc/examples/: mmsbox.conf  mmsc.conf
src/mbuni-1.4.0/extras/: Makefile  Makefile.am  Makefile.mine  Makefile.r133  Makefile.r26
src/mbuni-1.4.0/extras/pgsql-queue/: Makefile  Makefile.am  Makefile.mine  Makefile.r133  Makefile.r26  mms_pgsql_queue.c
src/mbuni-1.4.0/mmlib/: Makefile.am  mms_cfg.c  mms_cfg.def  mms_cfg.h  mms_mm7soap.c  mms_mm7soap.h  mms_mmbox.c  mms_msg.c  mms_msg.h  mms_queue.c  mms_queue.h  mms_strings.def  mms_uaprof.c  mms_util.c  mms_util.h
src/mbuni-1.4.0/mmsbox/: Makefile.am  bearerbox.c  dlr.c  mmsbox  mmsbox.c  mmsbox.h  mmsbox_cfg.c  mmsbox_cfg.h  mmsbox_resolve_shell.c  tt
src/mbuni-1.4.0/mmsc/: Makefile.am  mms_billing.h  mms_billing_shell.c  mms_detokenize_shell.c  mms_resolve.c  mms_resolve.h  mms_resolve_shell.c  mmsc_cfg.c  mmsc_cfg.h  mmsfromemail  mmsfromemail.c  mmsglobalsender.c  mmsmobilesender.c  mmsproxy  mmsproxy.c  mmsrelay  mmsrelay.c  mmsrelay.h  mmssend  mmssend.c
(+229 files in other folders)
